force-app/main/default/objects/Settings__c/fields/APP_Url__c.field-meta.xml
<CustomField>
    <fullName>APP_Url__c</fullName>
    <description>To get authentication token &amp; login</description>
    <encryptionScheme>None</encryptionScheme>
    <label>(deprecate) APP Url</label>
    <type>Url</type>
</CustomField>