force-app/main/default/objects/Settings__c/fields/Campaign_Member_Action_Last_Run_On__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member_Action_Last_Run_On__c</fullName>
    <label>Campaign Member Action Last Run On</label>
    <type>DateTime</type>
</CustomField>