force-app/main/default/objects/Settings__c/fields/Log_Sync_Memebers__c.field-meta.xml
<CustomField>
    <fullName>Log_Sync_Memebers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Log Sync Memebers</label>
    <type>Checkbox</type>
</CustomField>