force-app/main/default/objects/Settings__c/fields/Opt_in_Out_to_Salesforce_Mobile_Last_Run__c.field-meta.xml
<CustomField>
    <fullName>Opt_in_Out_to_Salesforce_Mobile_Last_Run__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Opt-in/Out to Salesforce Mobile Last Run</label>
    <type>DateTime</type>
</CustomField>