force-app/main/default/objects/Settings__c/fields/Toggle_inwise_Opt_in_Opt_out_Email__c.field-meta.xml
<CustomField>
    <fullName>Toggle_inwise_Opt_in_Opt_out_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>(depr)Toggle inwise Opt-in/Opt-out Email</label>
    <type>Checkbox</type>
</CustomField>