force-app/main/default/objects/Settings__c/fields/Toggle_Mobile_Opt_in_Opt_out__c.field-meta.xml
<CustomField>
    <fullName>Toggle_Mobile_Opt_in_Opt_out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Toggle Mobile Opt-in/Opt-out</label>
    <type>Checkbox</type>
</CustomField>