force-app/main/default/objects/Settings__c/fields/Track_Errors__c.field-meta.xml
<CustomField>
    <fullName>Track_Errors__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Track Errors</label>
    <type>Checkbox</type>
</CustomField>