force-app/main/default/objects/Settings__c/fields/Track_inwise_Activities__c.field-meta.xml
<CustomField>
    <fullName>Track_inwise_Activities__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Track inwise Activities</label>
    <type>Checkbox</type>
</CustomField>