force-app/main/default/objects/Settings__c/fields/Track_Logs__c.field-meta.xml
<CustomField>
    <fullName>Track_Logs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable or disable to track http logs</description>
    <label>Track Logs</label>
    <type>Checkbox</type>
</CustomField>