force-app/main/default/objects/Settings__c/fields/Use_Bulk_Push__c.field-meta.xml
<CustomField>
    <fullName>Use_Bulk_Push__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Bulk Push</label>
    <type>Checkbox</type>
</CustomField>